package com.tangerine.ticketbox;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class TicketboxApplication {

    public static void main(String[] args) {
        SpringApplication.run(TicketboxApplication.class, args);
    }

}
