classDiagram

    %% application
    class TicketBoxApplication
    TicketBoxApplication --> TicketOrderController : XXXTicketOrderRequest
    TicketBoxApplication --> TheatreController : XXXTheatreRequest

    %% controller
    class TicketOrderController
    TicketOrderController --> TicketOrderService : TicketParam

    class TheatreController
    TheatreController --> TheatreService : TheatreParam

    class TicketOrderService
    TicketOrderService --> TicketOrderRepository : TicketOrder
    TicketOrderService --> TicketRepository : Ticket

    class TheatreService
    TheatreService --> TheatreRepository : Theatre

    %% persistence
    class TicketRepository
    TicketRepository --> tickets : TicketEntity

    class TicketOrderRepository
    TicketOrderRepository --> ticket_orders : TicketOrderEntity

    class TheatreRepository
    TheatreRepository --> theatres